@@ -1,18 +1,29 @@
 <div id="search-{KrexxId}" class="hidden search-wrapper" style="position: absolute;">
-	<div class="ksearch" style="position: relative;">
-	    <span class="kname">Search</span>
-	    <span>
+    <div class="ksearch" style="position: relative;">
+        <span class="kname">Search</span>
+        <span>
 	        <input class="ksearchfield" type="text" autocomplete="off" value="" maxlength="50" size="30" name="Search">
 	        <span class="ksearch-state">0 / 0</span>
 	        <input data-instance="{KrexxId}" data-direction="back" class="ksearchnow" type="button" value="<<">
 	        <input data-instance="{KrexxId}" data-direction="forward" class="ksearchnow" type="button" value=">>">
+			<span class="koptions"></span>
 	        <span data-instance="{KrexxId}" class="kclose">&#10005;</span>
 	    </span>
-        <hr class="ksearchhr"/>
-        <label class="koptionleft"><input class="ksearchcase" type="checkbox" autocomplete="off" name="searchcase" value="searchcase">Case sensitive</label>
-        <label class="koptionright"><input class="ksearchkeys" type="checkbox" autocomplete="off" name="searchkeys" value="searchkeys" checked="checked">Search keys</label>
-        <br/>
-        <label class="koptionleft"><input class="ksearchshort" type="checkbox" autocomplete="off" name="searchshort" value="searchshort" checked="checked">Search short results</label>
-        <label class="koptionright"><input class="ksearchlong" type="checkbox" autocomplete="off" name="searchlong" value="searchlong" checked="checked">Search long results</label>
-	</div>
+        <div class="koptionwrapper khidden">
+            <hr class="ksearchhr"/>
+            <label class="koptionleft">
+                <input class="ksearchcase" type="checkbox" autocomplete="off" name="searchcase" value="searchcase">Case sensitive
+            </label>
+            <label class="koptionright">
+                <input class="ksearchshort" type="checkbox" autocomplete="off" name="searchshort" value="searchshort" checked="checked">Search short results
+            </label>
+            <br/>
+            <label class="koptionleft">
+                <input class="ksearchkeys" type="checkbox" autocomplete="off" name="searchkeys" value="searchkeys" checked="checked">Search keys
+            </label>
+            <label class="koptionright">
+                <input class="ksearchlong" type="checkbox" autocomplete="off" name="searchlong" value="searchlong" checked="checked">Search long results
+            </label>
+        </div>
+    </div>
 </div>
